--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ permalink:           pretty
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Anil Kumar Singh
+  url:               https://singhakr.github.io
+  email:             nlprnd@gmail.com
 
 # Gems
 plugins:
